--- a/three.js/three.js_04.html
+++ b/three.js/three.js_04.html
@@ -20,8 +20,9 @@
             camera.lookAt(new THREE.Vector3(0, 0, 0));
             scene.add(camera);
             //实体
-            // draw axes to help you understand the coordinate
+            //绘制坐标轴帮助理解
             drawAxes(scene);
+            //梯台
             drawGeometry(scene);
 
             //渲染（render）
@@ -61,9 +62,10 @@
 
                 var mesh = new THREE.Mesh(geometry,
                     new THREE.MeshBasicMaterial({
-                        color: 0xffff00,
+                        color: 0xff00ff,
                         wireframe: true
-                    }));
+                    })
+                );
                 scene.add(mesh);
             }
 
