--- a/three.js/three.js.demo.html
+++ b/three.js/three.js.demo.html
@@ -3,8 +3,176 @@
 <head>
     <meta charset="UTF-8">
     <title>THREE demo</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <link href="css/three.js.demo1.css" rel="stylesheet" type="text/css"/>
+
+    <script src="lib/three.js"></script>
+    <script src="js/OrbitControls.js"></script>
+    <script src="js/stats.min.js"></script>
+
+    <script type="text/javascript">
+        //产生随机颜色
+        var getRandomColor = function(){
+            return '#'+('00000'+(Math.random()*0x1000000<<0).toString(16)).slice(-6);
+        };
+
+        var lesson1 = {
+            scene: null,
+            camera: null,
+            renderer: null,
+            container: null,
+            controls: null,
+            clock: null,
+            stats: null,
+
+            init: function() { // 初始化
+                //定义变量
+                var SCREEN_WIDTH = window.innerWidth,
+                    SCREEN_HEIGHT = window.innerHeight;
+                var VIEW_ANGLE = 45, ASPECT = SCREEN_WIDTH / SCREEN_HEIGHT, NEAR = 1, FAR = 10000;
+
+                //渲染器
+                this.renderer = new THREE.WebGLRenderer({antialias:true, alpha: false});
+                this.renderer.setSize(SCREEN_WIDTH, SCREEN_HEIGHT);
+                this.renderer.setClearColor(0xffffff);
+                this.renderer.shadowMapEnabled = true;
+                this.renderer.shadowMapSoft = true;
+                //场景
+                this.scene = new THREE.Scene();
+                // 照相机
+                this.camera = new THREE.PerspectiveCamera( VIEW_ANGLE, ASPECT, NEAR, FAR);//--透视投影照相机（Perspective Camera）4个参数
+                this.scene.add(this.camera);
+                this.camera.position.set(-1000, 1000, 0);//设置照相机的位置
+                this.camera.lookAt(new THREE.Vector3(0,0,0));//设置照相机往0点方向看
+                //往body添加一个容器div
+                this.container = document.createElement('div');
+                document.body.appendChild(this.container);
+                this.container.appendChild(this.renderer.domElement);
+
+                // 事件
+               // THREEx.WindowResize(this.renderer, this.camera);
+
+                // 添加定向光线
+                var dLight = new THREE.DirectionalLight(0xffffff);
+                dLight.position.set(1, 1000, 1);
+                dLight.castShadow = true;
+                dLight.shadowCameraVisible = true;
+                dLight.shadowDarkness = 0.2;
+                dLight.shadowMapWidth = dLight.shadowMapHeight = 1000;
+                this.scene.add(dLight);
+
+                // 添加粒子光线
+                particleLight = new THREE.Mesh( new THREE.SphereGeometry(10, 10, 10), new THREE.MeshBasicMaterial({ color: getRandomColor() }));
+                particleLight.position = dLight.position;
+                this.scene.add(particleLight);
+
+                // 添加简单的场地
+                var groundGeometry = new THREE.PlaneGeometry(1000, 1000, 1, 1);
+                ground = new THREE.Mesh(groundGeometry, new THREE.MeshLambertMaterial({
+                    color: 0xff0000
+                }));
+                ground.position.y = 0;
+                ground.rotation.x = - Math.PI / 2;
+                ground.receiveShadow = true;
+                this.scene.add(ground);
+
+                // 添加圆形
+                var circle = new THREE.Mesh(new THREE.CircleGeometry(70, 50), new THREE.MeshLambertMaterial({ color: getRandomColor() }));
+                circle.rotation.x = - Math.PI / 2;
+                circle.rotation.y = - Math.PI / 3;
+                circle.rotation.z = Math.PI / 3;
+                circle.position.x = -300;
+                circle.position.y = 150;
+                circle.position.z = -300;
+                circle.castShadow = circle.receiveShadow = true;
+                this.scene.add(circle);
+
+                // 添加方块
+                var cube = new THREE.Mesh(new THREE.CubeGeometry(100, 100, 100), new THREE.MeshLambertMaterial({ color: getRandomColor() }));
+                cube.rotation.x = cube.rotation.z = Math.PI * 0.1;
+                cube.position.x = -300;
+                cube.position.y = 150;
+                cube.position.z = -100;
+                cube.castShadow = cube.receiveShadow = true;
+                this.scene.add(cube);
+
+                // 添加圆柱
+                var cube1 = new THREE.Mesh(new THREE.CylinderGeometry(60, 80, 90, 32), new THREE.MeshLambertMaterial({ color: getRandomColor() }));
+                cube1.rotation.x = cube1.rotation.z = Math.PI * 0.1;
+                cube1.position.x = -300;
+                cube1.position.y = 150;
+                cube1.position.z = 100;
+                cube1.castShadow = cube1.receiveShadow = true;
+                this.scene.add(cube1);
+
+                // 添加不规则的物体
+                var extrudeSettings = {
+                    amount: 10,
+                    steps: 10,
+                    bevelSegments: 10,
+                    bevelSize: 10,
+                    bevelThickness: 10
+                };
+                var triangleShape = new THREE.Shape();
+                triangleShape.moveTo(  0, -50 );
+                triangleShape.lineTo(  -50, 50 );
+                triangleShape.lineTo( 50, 50 );
+                triangleShape.lineTo(  0, -50 );
+
+                var extrude = new THREE.Mesh(new THREE.ExtrudeGeometry(triangleShape, extrudeSettings), new THREE.MeshLambertMaterial({ color: 0x00ff00 }));
+                extrude.rotation.y = Math.PI / 2;
+                extrude.position.x = -300;
+                extrude.position.y = 150;
+                extrude.position.z = 300;
+                extrude.castShadow = extrude.receiveShadow = true;
+                this.scene.add(extrude);
+
+            }
+
+        };
+
+
+        // 使场景动画化
+        function animate() {
+            requestAnimationFrame(animate);
+            render();
+          //  update();
+        }
+
+       /* // 更新控制器状态
+        function update() {
+           // lesson1.controls.update(lesson1.clock.getDelta());
+            lesson1.stats.update();
+            var timer = Date.now() * 0.000025;
+            particleLight.position.x = Math.sin(timer * 5) * 300;
+            particleLight.position.z = Math.cos(timer * 5) * 300;
+        }*/
+
+        // 渲染场景
+        function render() {
+            if (lesson1.renderer) {
+                lesson1.renderer.render(lesson1.scene, lesson1.camera);
+            }
+        }
+
+        // 在页面加载时初始化 lesson 对象
+        function initializeLesson() {
+            lesson1.init();
+            //render();
+            animate();
+        }
+
+        if (window.addEventListener)
+            window.addEventListener('load', initializeLesson, false);
+        else if (window.attachEvent)
+            window.attachEvent('onload', initializeLesson);
+        else window.onload = initializeLesson;
+
+    </script>
 </head>
 <body>
+
+
 
 </body>
 </html>
