--- a/中央财经大学/中央财经大学.html
+++ b/中央财经大学/中央财经大学.html
@@ -6,7 +6,7 @@
     <title>中央财经大学</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
-    <link href="./中央财经大学_files/base.css" rel="stylesheet" type="text/css">
+    <link href="files/base.css" rel="stylesheet" type="text/css">
     <link href="http://app.cufe.edu.cn/favicon.ico" rel="shortcut icon" type="image/x-icon">
 
     <meta name="full-screen" content="yes">
@@ -14,8 +14,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
     <meta name="renderer" content="ie-comp">
-    <script type="text/javascript" src="./中央财经大学_files/jquery-1.9.1.min.js"></script>
-    <script type="text/javascript" src="./中央财经大学_files/js.js"></script>
+    <script type="text/javascript" src="files/jquery-1.9.1.min.js"></script>
+    <script type="text/javascript" src="files/js.js"></script>
 
     <script>
         var os = function () {
@@ -75,7 +75,7 @@
 
     </script>
 
-    <link rel="stylesheet" type="text/css" href="./中央财经大学_files/style.css">
+    <link rel="stylesheet" type="text/css" href="files/style.css">
 
     <style>
         footer {
@@ -88,7 +88,7 @@
 
 <!--用于微信浏览器访问-->
 <div class="weixin_none" id="j_weixin">
-    <img src="./中央财经大学_files/weixin.jpg" style="width: 100%" class="img-responsive">
+    <img src="files/weixin.jpg" style="width: 100%" class="img-responsive">
 </div>
 
 <!-- pc端 -->
@@ -96,7 +96,7 @@
     <div class="header_center">
         <a href="javascript:void(0)" class="download_btn">立即下载</a>
         <a href="javascript:void(0)" class="logo">
-            <img src="./中央财经大学_files/logo.png">
+            <img src="files/logo.png">
         </a>
         <div class="clear"></div>
     </div>
@@ -104,9 +104,9 @@
 
 <div class="banner_box banner_phone_note" style="height: 570px;">
     <div class="banner_center" style="height: 570px;">
-        <div class="banner_phone"><img src="./中央财经大学_files/banner_phone.png"></div>
+        <div class="banner_phone"><img src="files/banner_phone.png"></div>
         <div class="banner_info">
-            <img src="./中央财经大学_files/weixin.png">
+            <img src="files/weixin.png">
             <p>用新浪微博或微信扫一扫下载</p>
             <a class="isIphone" target="_blank" href="https://itunes.apple.com/us/app/yi-dong-zhong-cai/id1111144535?l=zh&amp;ls=1&amp;mt=8"><i class="iphone-icon"></i>iPhone下载</a>
             <a href="https://www.app8848.com/cufe/app_files/MC_CUFE.apk"><i class="android-icon"></i>Android下载</a>
@@ -169,7 +169,7 @@
                     点到不用喊，开会不用跑，一键助学办公!<br>
                 </span>
         </div>
-        <div class="active_phone"><img src="./中央财经大学_files/img_phone1.png"></div>
+        <div class="active_phone"><img src="files/img_phone1.png"></div>
     </div>
 </div>
 
@@ -184,7 +184,7 @@
                     不用包打听，APP就是你的小灵通。<br>
                 </span>
         </div>
-        <div class="active_phone news_phone"><img src="./中央财经大学_files/img_phone2.png"></div>
+        <div class="active_phone news_phone"><img src="files/img_phone2.png"></div>
     </div>
 </div>
 
@@ -199,7 +199,7 @@
                     一个APP，一网打尽吃穿住行玩，聪明你的大学！<br>
                 </span>
         </div>
-        <div class="active_phone play_phone"><img src="./中央财经大学_files/img_phone3.png"></div>
+        <div class="active_phone play_phone"><img src="files/img_phone3.png"></div>
     </div>
 </div>
 
@@ -216,7 +216,7 @@
     <a href="javascript:void(0)" class="close">×</a>
     <div class="title">手机扫描左侧二维码快速下载，或选择适合你的手机系统下载！</div>
     <div class="pop_detail">
-        <img src="./中央财经大学_files/code.jpg">
+        <img src="files/code.jpg">
         <div class="btn_list">
             <a target="_blank" href="https://itunes.apple.com/us/app/yi-dong-zhong-cai/id1111144535?l=zh&amp;ls=1&amp;mt=8"><i class="iphone-icon"></i>iPhone下载</a>
             <a href="https://www.app8848.com/cufe/app_files/MC_CUFE.apk"><i class="android-icon"></i>Android下载</a>
@@ -237,19 +237,19 @@
     <div class="container" style="overflow: hidden;">
         <div class="imgTe">
             <p>1.首先点击设置中的通用</p>
-            <div class="img"><img src="./中央财经大学_files/img_help1.png" class="img-responsive"></div>
+            <div class="img"><img src="files/img_help1.png" class="img-responsive"></div>
         </div>
         <div class="imgTe imgTe-db">
             <p>2.然后进入通用中的描述文件</p>
-            <div class="img"><img src="./中央财经大学_files/img_help2.png" class="img-responsive"></div>
+            <div class="img"><img src="files/img_help2.png" class="img-responsive"></div>
         </div>
         <div class="imgTe">
             <p>3.可以看到如下图的企业级应用,点击</p>
-            <div class="img"><img src="./中央财经大学_files/img_help3.png" class="img-responsive"></div>
+            <div class="img"><img src="files/img_help3.png" class="img-responsive"></div>
         </div>
         <div class="imgTe">
             <p>4.点击后选择信任</p>
-            <div class="img"><img src="./中央财经大学_files/img_help4.png" class="img-responsive"></div>
+            <div class="img"><img src="files/img_help4.png" class="img-responsive"></div>
         </div>
     </div>
 </div>
@@ -298,7 +298,7 @@
 <!-- 手机 -->
 <div class="none top-right">
     <a class="top-right-download-btn download-btn" href="javascript:;">
-        <img id="t_down" class="radius-btn" src="./中央财经大学_files/icon-download.png">
+        <img id="t_down" class="radius-btn" src="files/icon-download.png">
     </a>
 </div>
 
@@ -345,9 +345,9 @@
         <h1>移劝来门户啦</h1>
 
         <a href="javascript:;" class="download-btn" id="head-download">
-            <img class="radius-btn disN img-download-i-h" src="./中央财经大学_files/download-1.png" title="苹果下载">
-            <img class="radius-btn disN" src="./中央财经大学_files/download-2.png" title="安卓下载">
-            <p class="loadPromptGif" id="p-loadPromptGif-h"><img src="./中央财经大学_files/loading.gif"></p>
+            <img class="radius-btn disN img-download-i-h" src="files/download-1.png" title="苹果下载">
+            <img class="radius-btn disN" src="files/download-2.png" title="安卓下载">
+            <p class="loadPromptGif" id="p-loadPromptGif-h"><img src="files/loading.gif"></p>
             <p class="loadPublicPrompt loadPromptFont" id="p-loadPromptFont-h">正在安装中...请按 Home 键返回桌面查看</p>
         </a>
         <p id="vernew" class="vernew"><span>当前版本号: 1.1.1</span> <span>更新日期: 2017.05.12</span></p>
@@ -405,7 +405,7 @@
             </span>
         </h2>
         <div class="phone-wrap">
-            <img class="phone" src="./中央财经大学_files/img_phone1.png" alt="">
+            <img class="phone" src="files/img_phone1.png" alt="">
         </div>
     </section>
     <section class="page page-img page-4" data-emit-events="" data-bottom-top="">
@@ -421,7 +421,7 @@
             </span>
         </h2>
         <div class="phone-wrap">
-            <img class="phone" src="./中央财经大学_files/img_phone2.png" alt="">
+            <img class="phone" src="files/img_phone2.png" alt="">
         </div>
     </section>
     <section class="page page-img page-6" data-emit-events="" data-bottom-top="">
@@ -437,15 +437,15 @@
             </span>
         </h2>
         <div class="phone-wrap">
-            <img class="phone" src="./中央财经大学_files/img_phone3.png" alt="">
+            <img class="phone" src="files/img_phone3.png" alt="">
 
         </div>
     </section>
     <footer>
         <a href="javascript:;" id="foot-download" class="download-btn" data-emit-events="" data-bottom-top="">
-            <img class="radius-btn disN img-download-i-f" src="./中央财经大学_files/download-1.png" title="苹果下载">
-            <img class="radius-btn disN" src="./中央财经大学_files/download-2.png" title="安卓下载">
-            <p class="loadPromptGif" id="p-loadPromptGif-f"><img src="./中央财经大学_files/loading.gif"></p>
+            <img class="radius-btn disN img-download-i-f" src="files/download-1.png" title="苹果下载">
+            <img class="radius-btn disN" src="files/download-2.png" title="安卓下载">
+            <p class="loadPromptGif" id="p-loadPromptGif-f"><img src="files/loading.gif"></p>
             <p class="loadPublicPrompt loadPromptFont" id="p-loadPromptFont-f">正在安装中... 请按 Home 键返回桌面查看</p>
         </a>
         <p>
@@ -457,8 +457,8 @@
 </div>
 
 <!-- 手机端要用到的JS -->
-<script src="./中央财经大学_files/qqapi.js"></script>
-<script src="./中央财经大学_files/zepto.min.js"></script>
-<script src="./中央财经大学_files/skrollr.min.js"></script>
+<script src="files/qqapi.js"></script>
+<script src="files/zepto.min.js"></script>
+<script src="files/skrollr.min.js"></script>
 
 </body></html>
